gcc/testsuite/g++.dg/warn/deprecated-5.C
@@ -1,0 +1,4 @@
+// PR c++/16370
+
+struct Foo { int i; } __attribute__ ((deprecated));
+void foo() { Foo f; }		// { dg-warning "deprecated" }
